# dioxus_web_template

./: .env.example
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
database/: Cargo.toml
database/migration/: Cargo.toml
database/migration/src/: lib.rs  m001_create_contact_form.rs  main.rs
database/src/: lib.rs
shared/: Cargo.toml
shared/src/: lib.rs
web/: Cargo.toml
